[package]
name = "timey"
version = "0.2.0"
description = "A simple command line tool for converting between timestamps and datetime strings"
license = "MIT"
authors = ["Peter Bryant <petermbryant@gmail.com>"]
edition = "2018"

documentation = "https://github.com/ptrbrynt/timey"
homepage = "https://github.com/ptrbrynt/timey"
repository = "https://github.com/ptrbrynt/timey"

[dependencies]
clap = "2.32.0"
chrono = "0.4"
clipboard = "0.5.0"